--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-toggle": "^1.1.0",
     "framer-motion": "^11.0.0",
-    "react-helmet-async": "^2.0.4"
+    "react-helmet-async": "^2.0.4",
+    "bcryptjs": "^2.4.3"
   },
   "devDependencies": {
     "@types/react": "18.2.0",
