--- a/package.json
+++ b/package.json
@@ -9,17 +9,18 @@
     "build": "vite build"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toggle": "^1.1.0",
+    "@radix-ui/react-toggle-group": "^1.1.0",
+    "@supabase/supabase-js": "^2.95.3",
+    "bcryptjs": "^2.4.3",
+    "class-variance-authority": "^0.7.0",
+    "framer-motion": "^11.0.0",
     "lucide-react": "^0.453.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.1",
-    "@radix-ui/react-slot": "^1.1.0",
-    "class-variance-authority": "^0.7.0",
-    "@radix-ui/react-toggle-group": "^1.1.0",
-    "@radix-ui/react-toggle": "^1.1.0",
-    "framer-motion": "^11.0.0",
     "react-helmet-async": "^2.0.4",
-    "bcryptjs": "^2.4.3"
+    "react-router-dom": "^6.8.1"
   },
   "devDependencies": {
     "@types/react": "18.2.0",
